Fixed: Accidental misalignment of close button

--- a/site-sass/components/navigation.scss
+++ b/site-sass/components/navigation.scss
@@ -511,7 +511,7 @@
 
 
   .overlay-navigation-header {
-  	position: sticky;
+    position: fixed;
   	top: 0;
   	left: 0;
   	width: 100%;
@@ -522,6 +522,7 @@
 
     @include mq($until:tablet) {
       padding: 15px 15px !important;
+    	position: sticky;
     }
 
     @include mq($until:desktop) {
